[gd_scene load_steps=8 format=3 uid="uid://cm3jd1w063vb7"]

[ext_resource type="PackedScene" uid="uid://crux6wau0nb12" path="res://Levels/BaseArea/base_area.tscn" id="1_8nobi"]
[ext_resource type="PackedScene" uid="uid://buqjs18jlfvjn" path="res://Levels/BaseArea/base_overview_area.tscn" id="1_d4f63"]
[ext_resource type="Script" path="res://Levels/BaseScene/base_scene.gd" id="1_k30ec"]
[ext_resource type="Texture2D" uid="uid://clqc6ofwyl47o" path="res://Levels/BaseArea/images/area_1.jpg" id="2_e6q3o"]
[ext_resource type="Texture2D" uid="uid://c4ks1fn5sycgk" path="res://Levels/BaseArea/images/area_2.jpg" id="3_633st"]
[ext_resource type="Texture2D" uid="uid://bkiorvvs2sysd" path="res://Levels/BaseArea/images/area_3.png" id="4_phnf1"]
[ext_resource type="Texture2D" uid="uid://oekii5oxkpvo" path="res://Levels/BaseArea/images/area_4.jpg" id="5_8ipwh"]

[node name="BaseScene" type="Node2D"]
script = ExtResource("1_k30ec")

[node name="OverviewArea" parent="." instance=ExtResource("1_d4f63")]

[node name="Title" parent="OverviewArea/MarginContainer" index="0"]
text = "Initial Scene 1"

[node name="Area1" parent="." instance=ExtResource("1_8nobi")]
visible = false

[node name="Image" parent="Area1" index="0"]
texture = ExtResource("2_e6q3o")
region_enabled = true

[node name="Title" parent="Area1/VBoxContainer/MarginContainer" index="0"]
text = "Area 1"

[node name="Area2" parent="." instance=ExtResource("1_8nobi")]
visible = false

[node name="Image" parent="Area2" index="0"]
position = Vector2(576, 324)
scale = Vector2(1.125, 0.84375)
texture = ExtResource("3_633st")

[node name="Title" parent="Area2/VBoxContainer/MarginContainer" index="0"]
text = "Area 2"

[node name="Area3" parent="." instance=ExtResource("1_8nobi")]
visible = false

[node name="Image" parent="Area3" index="0"]
position = Vector2(576, 324)
scale = Vector2(1.40488, 1.2)
texture = ExtResource("4_phnf1")

[node name="Title" parent="Area3/VBoxContainer/MarginContainer" index="0"]
text = "Area 3"

[node name="Area4" parent="." instance=ExtResource("1_8nobi")]
visible = false

[node name="Image" parent="Area4" index="0"]
position = Vector2(576, 324)
scale = Vector2(1.125, 0.945985)
texture = ExtResource("5_8ipwh")

[node name="Title" parent="Area4/VBoxContainer/MarginContainer" index="0"]
text = "Area 4"

[connection signal="area_changed" from="OverviewArea" to="." method="_on_overview_area_area_changed"]

[editable path="OverviewArea"]
[editable path="Area1"]
[editable path="Area2"]
[editable path="Area3"]
[editable path="Area4"]
